--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html,body{
 .navbar-nav input{
 	border-radius: 30px 0 0 30px;
 	margin-top:5%;
+	width:80%;
 	display:inline-block;
 }
 .search-btn {
@@ -31,9 +32,14 @@ html,body{
 	background-color:#fff;
 }
 .searchBox{
-	width:20%;
+	width:20%!important;
 }
 
 .mainBoxes{
 	border-radius:10px;
+	margin:10px;
+	background-color: #fff;
+}
+.infoBox{
+	height:200px;
 }
